<resources>
    <string name="app_name">Y ahora que!?</string>
    <string name="reg">Registrarse</string>
    <string name="acep">Aceptar</string>
    <string name="email" translatable="false">Email</string>
    <string name="img_logo">Logo de  la pantalla de inicio</string>
    <string name="email_txt">Cuadro para introducir el email</string>
    <string name="pass_txt">Input para la contraseña del usuario</string>
    <string name="todavia">¿Todavía no tienes una cuenta?</string>
    <string name="passrep">Repetir la contraseña</string>
    <string name="passrep_txt">Volver a poner la contraseña del usuario</string>
    <string name="phone">Teléfono</string>
    <string name="phone_txt">Escribir el teléfono del usuario</string>
    <string name="loc">Localidad</string>
    <string name="loc_txt">Localidad del usuario</string>
    <string name="log_error_txt">Error al identificarse, revise los datos</string>
    <string name="log_error">Error</string>
    <string name="proc_error_txt">Error en algún punto del proceso</string>
    <string name="pass_ext">Contraseña (Min Long 6 )</string>
    <string name="perfil">Perfil</string>
    <string name="avisos">Avisos</string>
    <string name="peticiones">Peticiones</string>
    <string name="mapa">Mapa</string>
    <string name="img_user">Imagen del usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="ext" translatable="false">Extra</string>
    <string name="conf">Configuración</string>
    <string name="tabs_txt">Contenido de la pestaña activa del perfil del usuario</string>
    <string name="write_new_data">Escriba el nuevo valor del dato</string>
    <string name="cancel">Cancelar</string>
    <string name="info">Información</string>
    <string name="warn_msg">Mensaje de advertencia</string>
    <string name="check_phone">Nº de Telf. no válido</string>
    <string name="eq">Valores iguales</string>
    <string name="requirement_fail">No se cumplen los requisitos (Titulo, descripción, GPS)</string>
    <string name="succ">Operación realizada con éxito</string>
    <string name="write_here">Escriba aquí</string>
    <string name="login">Autenticarse</string>
    <string name="mod_osc">Modo Oscuro</string>
    <string name="profile_priv">Privacidad del pefil</string>
    <string name="mail_alert">Alertas por mail</string>
    <string name="pub">Público</string>
    <string name="priv">Privado</string>
    <string name="cont">Contactos</string>
    <string name="suggs">Mostrar Sugerencias</string>
    <string name="anuncios">Anuncios Personalizados</string>
    <string name="cesion_datos">Cesión de Datos a 3º</string>
    <string name="polls">Participar en encuestas</string>
    <string name="gen" translatable="false">General</string>
    <string name="filter_cont">Filtrar contenido sensible</string>
    <string name="priva">Privacidad</string>
    <string name="press">Pulse para elegir</string>
    <string name="act_beta">Activar opciones experimentales</string>
    <string name="act_beta_txt">Muestra funcionalidades de la app en pruebas</string>
    <string name="sesion">Sesión</string>
    <string name="delete_user">Borrar Usuario</string>
    <string name="log_again">Vuelga a logarse por favor</string>
    <string name="ch_paswd">Cambiar Contraseña</string>
    <string name="sugg_logout">Para usar esta parte se recomienda autenticarse de nuevo</string>
    <string name="yes">Si</string>
    <string name="areyousure">¿Está segur@ de borrar el usuario?</string>
    <string name="testing">En pruebas</string>
    <string name="perm_denied">Permisos Denegados</string>
    <string name="perm_denied_txt">Sin acceso a la camara ni a los permisos de lectura/escritura no se puede cambiar la imagen de perfil</string>
    <string name="hot_warn">Aviso por altas temperaturas</string>
    <string name="fire_warn">Aviso por fuego</string>
    <string name="rain_warn">Aviso por lluvias</string>
    <string name="water_warn">Aviso por corte de suministro</string>
    <string name="warn_img">Imagen de item warning</string>
    <string name="level">Nivel</string>
    <string name="active">Activo</string>
    <string name="add_sign" translatable="false">+</string>
    <string name="inactive">Inactivo</string>
    <string name="status">Estado</string>
    <string name="req_img">Imagen de item requests</string>
    <string name="title">Titulo</string>
    <string name="descrip">Descripción</string>
    <string name="save">Guardar</string>
    <string name="title_txt">Titulo de la petición</string>
    <string name="descrip_txt">Descripción de la petición</string>
    <string name="new_req">Nueva Petición</string>
    <string name="perm_gps_den">Permisos de GPS denegados</string>
    <string name="lastlocation_unknow">LastLocation Desconocida, fuerce localización por favor</string>
    <string name="active_gps">Por favor, active el GPS</string>
    <string name="weird_gps_fail">Fallo indeterminado al obtener la ubicación</string>
    <string name="detail_req">Detalles de la Petición</string>
    <string name="requestor">Solicitante</string>
    <string name="requestor_txt">Aquí aparece el solicitante</string>
    <string name="date">Fecha</string>
    <string name="lat">Latitud</string>
    <string name="longi">Longitud</string>
    <string name="lat_long">Latitud: %1$s // Longitud: %2$s</string>
    <string name="location">Ubicación</string>
    <string name="descrip_tag">Etiqueta de campo descripción</string>
    <string name="id" translatable="false">Id</string>
    <string name="pickphoto_txt">Boton para tomar una foto de avatar</string>
    <string name="activarp">Activar Petición</string>
    <string name="desactivarp">Desactivar Petición</string>
</resources>