<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory  android:title="@string/gen">

        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_1"
            android:title="@string/mail_alert"
            app:summary="@string/testing" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="suggs"
            android:title="@string/suggs" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="polls"
            android:title="@string/polls" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="actbeta"
            android:summary="@string/act_beta_txt"
            android:title="@string/act_beta" />

    </PreferenceCategory>


</PreferenceScreen>