<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <EditText
        android:id="@+id/etPass2"
        android:layout_width="255dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/passrep_txt"
        android:ems="10"
        android:hint="@string/passrep"
        android:inputType="textPassword"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="255dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/loc_txt"
        android:drawableStart="@android:drawable/ic_menu_myplaces"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/loc"
        android:inputType="text"
        android:maxLines="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="255dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/pass_txt"
        android:ems="10"
        android:hint="@string/pass_ext"
        android:inputType="textPassword"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="255dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/email_txt"
        android:drawableStart="@android:drawable/ic_dialog_email"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="255dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/phone_txt"
        android:drawableStart="@android:drawable/ic_menu_call"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass2" />

    <Button
        android:id="@+id/btRegistrar"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/login"
        android:textColor="@color/beige"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivLogoReg"
        android:layout_width="133dp"
        android:layout_height="118dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCity"
        app:srcCompat="@drawable/whatdo1920" />
</androidx.constraintlayout.widget.ConstraintLayout>