<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthActivity">

    <Button
        android:id="@+id/btLogarse"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/acep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="255dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/pass_txt"
        android:ems="10"
        android:hint="@string/pass_ext"
        android:inputType="textPassword"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="255dp"
        android:layout_height="75dp"
        android:layout_marginTop="44dp"
        android:autofillHints="@string/email_txt"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="327dp"
        android:layout_height="263dp"
        android:contentDescription="@string/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whatdo1920"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvTodavia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/todavia"
        android:textAllCaps="false"
        android:textColor="@color/beige"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>