<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profiletabs.SesionFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btChPass"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/ch_paswd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btLogout"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="@string/cerrar_sesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btChPass" />

        <Button
            android:id="@+id/btDeleteUser"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="@string/delete_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btLogout" />

        <TextView
            android:id="@+id/tvSuggSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="@string/sugg_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btDeleteUser" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>